--- a/index.html
+++ b/index.html
@@ -1,1 +1,47 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <title>TChat</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+    <link rel="stylesheet" href="styles.css" />
+</head>
+<body>
+  <div class="theme-toggle">
+    <i class="fas fa-moon"></i>
+  </div>
+  <div class="card">
+    <div id="header">
+      <div class="bot-avatar">
+        <i class="fas fa-robot"></i>
+      </div>
+      <div>
+        <h1>TChat</h1>
+        <p class="status">Online</p>
+      </div>
+    </div>
+    <div id="message-section">
+      <div class="message" id="bot">
+        <span id="bot-response">Hello! I'm your enhanced chatbot. How can I help you today?</span>
+      </div>
+    </div>
+    <div class="typing-indicator">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
+    <div id="input-section">
+      <button class="emoji-btn" id="emoji-btn">😊</button>
+      <input id="input" type="text" placeholder="Type a message here..." autocomplete="off" />
+      <div class="send-btn" onclick="sendMessage()">
+        <i class="fas fa-paper-plane"></i>
+      </div>
+    </div>
+  </div>
+  <script src="https://cdn.jsdelivr.net/npm/@emoji-mart/data"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@emoji-mart/js"></script>
+  <script src="./js/script.js"></script>
+</body>
+</html>
